[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/player-physical/PlayerHUD.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.654902, 0, 0, 1 )

[node name="PlayerHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="RichTextLabel" parent="PanelContainer/HBoxContainer"]
margin_right = 503.0
margin_bottom = 586.0
size_flags_horizontal = 3
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 507.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
alignment = 1

[node name="Fov" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 503.0
margin_bottom = 292.0

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/Fov"]
margin_right = 503.0
margin_bottom = 14.0
text = "Camera FOV"

[node name="HSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer/Fov"]
margin_top = 18.0
margin_right = 503.0
margin_bottom = 34.0
min_value = 1.0
max_value = 179.0
value = 70.0

[node name="Breakpoint" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 503.0
margin_bottom = 310.0
custom_styles/normal = SubResource( 1 )
text = "Breakpoint"

[node name="Exit" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 314.0
margin_right = 503.0
margin_bottom = 328.0
custom_styles/normal = SubResource( 1 )
text = "Exit"

[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/Fov/HSlider" to="." method="_on_fov_value_changed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Breakpoint" to="." method="_on_Breakpoint_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
